objects/SBQQ__SearchIndex__c.object
<CustomObject>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Id value for use with Copado Data Deployer or other external systems</description>
        <externalId>true</externalId>
        <label>ExtId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQ__Localization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Localization</label>
        <referenceTo>SBQQ__Localization__c</referenceTo>
        <relationshipLabel>Search Index</relationshipLabel>
        <relationshipName>Search_Index</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Value__c</fullName>
        <label>Value</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Search Index</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Search Index</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>